# DualVectorFoil

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/assets/: blur_fragment_shader_code.glsl  blur_vertex_shader_code.vert  pinkFox.mtl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jassimp-native/: Android.mk  CMakeLists.txt
app/src/main/cpp/jassimp-native/src/: jassimp.cpp  jassimp.h
app/src/main/java/com/jason/jassimp/: AiAnimBehavior.java  AiAnimation.java  AiBlendMode.java  AiBone.java  AiBoneWeight.java  AiBuiltInWrapperProvider.java  AiCamera.java  AiClassLoaderIOSystem.java  AiColor.java  AiConfig.java  AiConfigOptions.java  AiIOStream.java  AiIOSystem.java  AiInputStreamIOStream.java  AiLight.java  AiLightType.java  AiMaterial.java  AiMatrix4f.java  AiMesh.java  AiMeshAnim.java  AiMetadataEntry.java  AiNode.java  AiNodeAnim.java  AiPostProcessSteps.java  AiPrimitiveType.java  AiQuaternion.java  AiScene.java  AiSceneFlag.java  AiShadingMode.java  AiTextureInfo.java  AiTextureMapMode.java  AiTextureMapping.java  AiTextureOp.java  AiTextureType.java  AiVector.java  AiWrapperProvider.java  JaiDebug.java  Jassimp.java  JassimpConfig.java  JassimpLibraryLoader.java  (+1 more)
app/src/main/java/com/jason/mysurfaceview/: AssetsUtils.kt  BlurGLSurfaceView.kt  Cube.kt  Line.kt  MainActivity.kt  Mirror.kt  Model.kt  MyGLRenderer.kt  MyGLSurfaceView.kt  ObjLoader.kt  Square.kt  Square2.kt
app/src/main/java/com/jassimp/src/jassimp/: AiAnimBehavior.java  AiAnimation.java  AiBlendMode.java  AiBone.java  AiBoneWeight.java  AiBuiltInWrapperProvider.java  (+35 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
